--- a/Web.config
+++ b/Web.config
@@ -3,41 +3,69 @@
 
 	<system.web>
 		<compilation debug="true" targetFramework="4.0" />
+
+		<!-- Forms authentication: login page is Default.aspx -->
+		<authentication mode="Forms">
+			<forms loginUrl="Default.aspx" timeout="30" />
+		</authentication>
+
+		<!-- By default everyone can see pages unless overridden below -->
+		<authorization>
+			<allow users="*" />
+		</authorization>
 	</system.web>
+
+	<!-- Member page: authenticated users only -->
+	<location path="Member.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+
+	<!-- Staff page: authenticated users only (your teammate can tighten this if needed) -->
+	<location path="Staff.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+
 	<system.serviceModel>
 		<bindings>
-   <basicHttpBinding>
-    <binding name="BasicHttpBinding_IService1" />
-   </basicHttpBinding>
-  </bindings>
-  <client>
-   <endpoint address="http://webstrar122.fulton.asu.edu/page0/Service1.svc"
-    binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
-    contract="ServiceReference1.IService1" name="BasicHttpBinding_IService1" />
-  </client>
-  <behaviors>
+			<basicHttpBinding>
+				<binding name="BasicHttpBinding_IService1" />
+			</basicHttpBinding>
+		</bindings>
+		<client>
+			<endpoint address="http://webstrar122.fulton.asu.edu/page0/Service1.svc"
+					  binding="basicHttpBinding"
+					  bindingConfiguration="BasicHttpBinding_IService1"
+					  contract="ServiceReference1.IService1"
+					  name="BasicHttpBinding_IService1" />
+		</client>
+		<behaviors>
 			<serviceBehaviors>
 				<behavior>
-					<!-- To avoid disclosing metadata information, set the value below to false before deployment -->
-					<serviceMetadata httpGetEnabled="true"/>
-					<!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-					<serviceDebug includeExceptionDetailInFaults="false"/>
+					<serviceMetadata httpGetEnabled="true" />
+					<serviceDebug includeExceptionDetailInFaults="false" />
 				</behavior>
 			</serviceBehaviors>
 		</behaviors>
 		<serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
 	</system.serviceModel>
+
 	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true"/>
+		<modules runAllManagedModulesForAllRequests="true" />
 		<handlers>
-			<add name=".svc" verb="*" path="*.svc" type="System.ServiceModel.Activation.ServiceHttpHandlerFactory, System.ServiceModel.Activation,&#xD;&#xA;           Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-                                                                              />
+			<add name=".svc"
+				 verb="*"
+				 path="*.svc"
+				 type="System.ServiceModel.Activation.ServiceHttpHandlerFactory, System.ServiceModel.Activation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
 		</handlers>
-		<!--
-        To browse web app root directory during debugging, set the value below to true.
-        Set to false before deployment to avoid disclosing web app folder information.
-      -->
-		<directoryBrowse enabled="true"/>
+		<directoryBrowse enabled="true" />
 	</system.webServer>
 
 </configuration>
