--- a/bin/WebApplication1.dll.config
+++ b/bin/WebApplication1.dll.config
@@ -24,7 +24,7 @@
 		</system.web>
 	</location>
 
-	<!-- Staff page: authenticated users only (your teammate can tighten this if needed) -->
+	<!-- Staff page: authenticated users only -->
 	<location path="Staff.aspx">
 		<system.web>
 			<authorization>
@@ -35,17 +35,19 @@
 
 	<system.serviceModel>
 		<bindings>
-			<basicHttpBinding>
-				<binding name="BasicHttpBinding_IService1" />
-			</basicHttpBinding>
-		</bindings>
+   <basicHttpBinding>
+    <binding name="BasicHttpBinding_IService1" />
+    <binding name="BasicHttpBinding_IService11" />
+   </basicHttpBinding>
+  </bindings>
 		<client>
-			<endpoint address="http://webstrar122.fulton.asu.edu/page0/Service1.svc"
-					  binding="basicHttpBinding"
-					  bindingConfiguration="BasicHttpBinding_IService1"
-					  contract="ServiceReference1.IService1"
-					  name="BasicHttpBinding_IService1" />
-		</client>
+   <endpoint address="http://webstrar122.fulton.asu.edu/page0/Service1.svc"
+    binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
+    contract="ServiceReference1.IService1" name="BasicHttpBinding_IService1" />
+   <endpoint address="http://webstrar122.fulton.asu.edu/page1/Service1.svc"
+    binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService11"
+    contract="ServiceReference3.IService1" name="BasicHttpBinding_IService11" />
+  </client>
 		<behaviors>
 			<serviceBehaviors>
 				<behavior>
@@ -61,9 +63,9 @@
 		<modules runAllManagedModulesForAllRequests="true" />
 		<handlers>
 			<add name=".svc"
-				 verb="*"
-				 path="*.svc"
-				 type="System.ServiceModel.Activation.ServiceHttpHandlerFactory, System.ServiceModel.Activation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+     verb="*"
+     path="*.svc"
+     type="System.ServiceModel.Activation.ServiceHttpHandlerFactory, System.ServiceModel.Activation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
 		</handlers>
 		<directoryBrowse enabled="true" />
 	</system.webServer>
